Fixed a button alignment issue and deleted the now unneeded second stylesheet.

--- a/public/css/one.css
+++ b/public/css/one.css
@@ -500,7 +500,6 @@ input.button.green, a.button.green {
     font-family: "Chunkfive", serif;
     font-size: 1.3em;
     text-shadow: 0 1px 0 rgba(0, 0, 0, 0.8);
-    float: right;
 }
     
 input.button.green:hover, a.button.green:hover {
